fix: corrigir o ajuste do layout
ultimo commit deixou o layout bugado. Corrigi o layout e deixei ele um
pouco mais responsivo e ajustavel acrescentando um grid area no
elementos.

--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -36,3 +36,27 @@
 #header-system-root button:active {
   opacity: 0.6;
 }
+
+.grid-areas-layout {
+  grid-template-areas: 
+    "header-system header-system"
+    "sidebar main"
+    "sidebar main"
+    "footer footer";
+}
+
+#grid-in-sidebar {
+  grid-area: sidebar;
+}
+
+#grid-in-main {
+  grid-area: main;
+}
+
+#grid-in-footer {
+  grid-area: footer;
+}
+
+#header-system-root {
+  grid-area: header-system;
+}
